# AI-Customer-Support-Agent

API/: pyproject.toml
API/agents/: agents.py  graph.py  prompts.py  retriever.py  states.py  tools.py  vectorstore.py
API/faiss_index/: index.faiss  index.pkl
